<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>io.quarkiverse</groupId>
    <artifactId>quarkiverse-parent</artifactId>
    <version>10</version>
  </parent>

  <groupId>io.quarkiverse.jberet</groupId>
  <artifactId>quarkus-jberet-parent</artifactId>
  <version>1.1.1-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>Quarkus - JBeret - Parent</name>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <compiler.plugin.version>3.10.1</compiler.plugin.version>
    <surefire.plugin.version>3.0.0-M7</surefire.plugin.version>
    <staging.plugin.version>1.6.8</staging.plugin.version>

    <quarkus.version>2.13.0.Final</quarkus.version>
    <jakarta.batch-api.version>1.0.2</jakarta.batch-api.version>
    <jberet.version>1.4.8.Final</jberet.version>
    <jberet-rest.version>1.4.1.Final</jberet-rest.version>
    <jberet-schedule.version>1.4.1.Final</jberet-schedule.version>
  </properties>

  <modules>
    <module>core</module>
    <module>rest/deployment</module>
    <module>rest/runtime</module>
    <module>integration-tests</module>
    <module>release</module>
  </modules>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${compiler.plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>io.quarkus</groupId>
          <artifactId>quarkus-bootstrap-maven-plugin</artifactId>
          <version>${quarkus.version}</version>
        </plugin>
        <plugin>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-maven-plugin</artifactId>
            <version>${quarkus.version}</version>
        </plugin>        
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${surefire.plugin.version}</version>
          <configuration>
            <argLine>--add-opens=java.base/java.security=ALL-UNNAMED</argLine>
            <systemProperties>
              <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
            </systemProperties>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>io.quarkus</groupId>
        <artifactId>quarkus-bom</artifactId>
        <version>${quarkus.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <dependency>
        <groupId>jakarta.batch</groupId>
        <artifactId>jakarta.batch-api</artifactId>
        <version>${jakarta.batch-api.version}</version>
      </dependency>

      <dependency>
        <groupId>org.jberet</groupId>
        <artifactId>jberet-core</artifactId>
        <version>${jberet.version}</version>
      </dependency>

      <dependency>
        <groupId>org.jberet</groupId>
        <artifactId>jberet-rest-api</artifactId>
        <version>${jberet-rest.version}</version>
      </dependency>

      <dependency>
        <groupId>org.jberet</groupId>
        <artifactId>jberet-schedule-executor</artifactId>
        <version>${jberet-schedule.version}</version>
      </dependency>

      <dependency>
        <groupId>io.quarkiverse.jberet</groupId>
        <artifactId>quarkus-jberet</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>io.quarkiverse.jberet</groupId>
        <artifactId>quarkus-jberet-deployment</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>io.quarkiverse.jberet</groupId>
        <artifactId>quarkus-jberet-rest</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>io.quarkiverse.jberet</groupId>
        <artifactId>quarkus-jberet-deployment-rest</artifactId>
        <version>${project.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
</project>
